--- a/Prediction_of_Product_Sales.ipynb
+++ b/Prediction_of_Product_Sales.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1ovOtVFgEU9d-V4jmg4Koro4tbLTuhUvJ",
-      "authorship_tag": "ABX9TyMb1aeR8okbTzHHsepYVYks",
+      "authorship_tag": "ABX9TyOjPISDIphNKLrIP2kvZv+j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Prediction of Product Sales\n",
-        "\n",
-        "William Rodemoyer"
+        "# **Prediction of Product Sales**\n",
+        "\n"
       ],
       "metadata": {
         "id": "5ihBu0Drsyot"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **Author:** William Rodemoyer"
+      ],
+      "metadata": {
+        "id": "D6R4SoL42N_8"
       }
     },
     {
@@ -65,7 +73,7 @@
       "metadata": {
         "id": "6ogOYaaJ0rIk"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,45 +88,38 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/Data/sales_predictions.csv')\n",
-        "df.info()\n",
+        "df = pd.read_csv('/content/drive/MyDrive/Data/sales_predictions.csv')\n"
+      ],
+      "metadata": {
+        "id": "Y85yGxpb2CIm"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### .head()"
+      ],
+      "metadata": {
+        "id": "a98AjWNQd4qg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df.head()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 696
+          "height": 357
         },
-        "id": "Y85yGxpb2CIm",
-        "outputId": "0a512d2b-7d3f-4d4c-ca00-fd14b0fe2247"
+        "id": "KreCY3TcdzO0",
+        "outputId": "179c733a-0157-4590-b7c6-6d08a5d6ba27"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 8523 entries, 0 to 8522\n",
-            "Data columns (total 12 columns):\n",
-            " #   Column                     Non-Null Count  Dtype  \n",
-            "---  ------                     --------------  -----  \n",
-            " 0   Item_Identifier            8523 non-null   object \n",
-            " 1   Item_Weight                7060 non-null   float64\n",
-            " 2   Item_Fat_Content           8523 non-null   object \n",
-            " 3   Item_Visibility            8523 non-null   float64\n",
-            " 4   Item_Type                  8523 non-null   object \n",
-            " 5   Item_MRP                   8523 non-null   float64\n",
-            " 6   Outlet_Identifier          8523 non-null   object \n",
-            " 7   Outlet_Establishment_Year  8523 non-null   int64  \n",
-            " 8   Outlet_Size                6113 non-null   object \n",
-            " 9   Outlet_Location_Type       8523 non-null   object \n",
-            " 10  Outlet_Type                8523 non-null   object \n",
-            " 11  Item_Outlet_Sales          8523 non-null   float64\n",
-            "dtypes: float64(4), int64(1), object(7)\n",
-            "memory usage: 799.2+ KB\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -153,7 +154,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bb98f8b3-335b-46d9-adb1-147dee5db250\">\n",
+              "  <div id=\"df-6aab3806-e41b-4526-890f-baa93c913f27\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -266,7 +267,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb98f8b3-335b-46d9-adb1-147dee5db250')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6aab3806-e41b-4526-890f-baa93c913f27')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -317,12 +318,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bb98f8b3-335b-46d9-adb1-147dee5db250 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6aab3806-e41b-4526-890f-baa93c913f27 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bb98f8b3-335b-46d9-adb1-147dee5db250');\n",
+              "          const element = document.querySelector('#df-6aab3806-e41b-4526-890f-baa93c913f27');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -345,7 +346,57 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### .info()"
+      ],
+      "metadata": {
+        "id": "nrTacA_QeClJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_QEPDIUTd143",
+        "outputId": "f99ac6c8-12db-4962-9f5c-20f81f70b30c"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 8523 entries, 0 to 8522\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                     Non-Null Count  Dtype  \n",
+            "---  ------                     --------------  -----  \n",
+            " 0   Item_Identifier            8523 non-null   object \n",
+            " 1   Item_Weight                7060 non-null   float64\n",
+            " 2   Item_Fat_Content           8523 non-null   object \n",
+            " 3   Item_Visibility            8523 non-null   float64\n",
+            " 4   Item_Type                  8523 non-null   object \n",
+            " 5   Item_MRP                   8523 non-null   float64\n",
+            " 6   Outlet_Identifier          8523 non-null   object \n",
+            " 7   Outlet_Establishment_Year  8523 non-null   int64  \n",
+            " 8   Outlet_Size                6113 non-null   object \n",
+            " 9   Outlet_Location_Type       8523 non-null   object \n",
+            " 10  Outlet_Type                8523 non-null   object \n",
+            " 11  Item_Outlet_Sales          8523 non-null   float64\n",
+            "dtypes: float64(4), int64(1), object(7)\n",
+            "memory usage: 799.2+ KB\n"
+          ]
         }
       ]
     },
@@ -361,7 +412,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1) How many rows and columns?\n",
+        "# Identifying how many rows and columns.\n",
         "df.shape "
       ],
       "metadata": {
@@ -371,7 +422,7 @@
         "id": "XC4t7-sG5Xob",
         "outputId": "b80512a7-cf37-4491-eecd-98b4b4b3b418"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +448,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#2) What are the datatypes of each variable?\n",
+        "# Identifying each variables datatype.\n",
         "df.dtypes"
       ],
       "metadata": {
@@ -407,7 +458,7 @@
         "id": "Am3A12q1EIeC",
         "outputId": "6ddc16bf-555a-42ae-c3b6-ab7d06088978"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +487,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 3) Are there duplicates? If so, drop any duplicates.\n",
+        "# Checking for duplicates.\n",
         "df.duplicated().sum()"
       ],
       "metadata": {
@@ -446,7 +497,7 @@
         "id": "hK3leLEtGFCF",
         "outputId": "d7377852-7103-46f4-96d1-4ea3763e9fc1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +523,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 4) Identify missing values.\n",
+        "# Identifying any missing values.\n",
         "df.isna().sum()"
       ],
       "metadata": {
@@ -482,7 +533,7 @@
         "id": "5FO7VzqZG40m",
         "outputId": "ebc0ac7e-3f6f-4e12-e7ff-a05bcc20ac5a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +571,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 5) Decide on how to address the missing values and do it! (This requires your judgement, so explain your choice).\n",
+        "# Finding the percentage of missing values in each column.\n",
         "print(df.isna().sum()/len(df)*100)"
       ],
       "metadata": {
@@ -530,7 +581,7 @@
         "id": "CfLZCOZBHzHi",
         "outputId": "a2aada16-fd05-4626-a563-7608deebd237"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,13 +607,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Item_Weight \n",
+        "# Resolving the missing values in column 'Item_Weight' \n",
         "median_weight = df['Item_Weight'].median()"
       ],
       "metadata": {
         "id": "GnxkulTgWCfF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -573,7 +624,7 @@
       "metadata": {
         "id": "bgtJ5Td7eu2r"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -588,13 +639,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Outlet_Size\n",
+        "# Resolving the missing values in column 'Outlet_Size'\n",
         "df['Outlet_Size'].fillna( value = 'Unknown', inplace= True)"
       ],
       "metadata": {
         "id": "W5KakVQAftFe"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -609,7 +660,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 6) Confirm that there are no missing values after addressing them.\n",
+        "# Confirming that all missing values were dealt with.\n",
         "df.isna().sum()"
       ],
       "metadata": {
@@ -619,7 +670,7 @@
         "id": "X7jBnDaONe_6",
         "outputId": "1e049691-dec7-4eb8-cfdb-983fd29991ae"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +708,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 7) Find and fix any inconsistent categories of data (example: fix cat, Cat, and cats so that they are consistent).\n",
+        "# Looking for inconsistent categories of data \n",
         "df['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
@@ -667,7 +718,7 @@
         "id": "zjQyI8ZLN7Gj",
         "outputId": "2f82c72e-987b-4ba7-ef73-3cd80ca35827"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,6 +740,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Fixing the categories of data that have inconsistencies.\n",
         "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('LF', 'Low Fat')\n",
         "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('low fat', 'Low Fat')\n",
         "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('reg', 'Regular')\n",
@@ -701,7 +753,7 @@
         "id": "rT_i33AhkR6t",
         "outputId": "b6008449-a228-4f10-c541-3cf229b310f4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +781,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 8) For any numerical columns, obtain the summary statistics of each (min, max, mean).\n",
+        "# Retrieving the min, max, & mean of any numeric column.\n",
         "df.describe()"
       ],
       "metadata": {
@@ -740,7 +792,7 @@
         "id": "OdpNg2BpQoE7",
         "outputId": "3027bde8-d7eb-43c9-ca8f-4157bfa915c2"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
